<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="200dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgEdtPhone"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:src="@drawable/ic_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="13dp"/>
    <EditText
        android:id="@+id/edtPhone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/phone"
        android:textSize="15sp"
        android:paddingLeft="20dp"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:id="@+id/imgEdtPass"
        android:src="@drawable/ic_lock"
        app:layout_constraintTop_toBottomOf="@+id/edtPhone"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/edtPass"
        android:paddingLeft="20dp"
        android:textSize="15sp"
        android:hint="@string/pass"
        app:layout_constraintTop_toTopOf="@+id/imgEdtPass"
        app:layout_constraintBottom_toBottomOf="@+id/imgEdtPass"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:id="@+id/txtForgotPass"
        android:text="@string/forgotPass"
        android:textSize="15sp"
        android:textColor="@color/green"
        app:layout_constraintTop_toBottomOf="@+id/edtPass"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@drawable/bgr_btn_login"
        app:layout_constraintTop_toBottomOf="@+id/txtForgotPass"
        android:layout_marginTop="60dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/textOrLogin"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="40dp"/>
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/btnFacbook"
        android:src="@drawable/ic_fb"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/Gmail"
        android:layout_marginTop="100dp"/>

    <Button
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/btnGmail"
        android:background="@drawable/bgr_btn_sns"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintLeft_toRightOf="@id/btnFacbook"
        app:layout_constraintRight_toLeftOf="@id/Google"
        android:layout_marginTop="100dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Gmail"
        android:src="@drawable/ic_gmail"
        app:layout_constraintBottom_toBottomOf="@+id/btnGmail"
        app:layout_constraintTop_toTopOf="@+id/btnGmail"
        app:layout_constraintLeft_toLeftOf="@+id/btnGmail"
        app:layout_constraintRight_toRightOf="@+id/btnGmail"
        android:translationZ="2dp"/>
    <Button
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/btnGoogle"
        android:background="@drawable/bgr_btn_sns"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintLeft_toRightOf="@id/Gmail"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="100dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Google"
        android:src="@drawable/ic_google"
        app:layout_constraintLeft_toLeftOf="@id/btnGoogle"
        app:layout_constraintRight_toRightOf="@id/btnGoogle"
        app:layout_constraintTop_toTopOf="@+id/btnGoogle"
        app:layout_constraintBottom_toBottomOf="@+id/btnGoogle"
        android:translationZ="2dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:id="@+id/txtCanRegister"
        android:text="@string/canRegister"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/btnFacbook"
        app:layout_constraintRight_toLeftOf="@+id/txtRegister"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="50dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:id="@+id/txtRegister"
        android:text="@string/register"
        android:textSize="15sp"
        android:textColor="@color/green"
        app:layout_constraintTop_toBottomOf="@+id/btnFacbook"
        app:layout_constraintLeft_toRightOf="@+id/txtCanRegister"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="3dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>